# curso_visao_cimatec

./: .gitignore  LICENSE  README.md  opencv_install.sh
aula_1/: CMakeLists.txt
aula_1/include/filtering/: filter_source.hpp
aula_1/src/: filter_source.cpp  read_writting_image.cpp  read_writting_video.cpp
aula_2/: CMakeLists.txt  Makefile  blur.out  canny.out  contrast.out  embossing.out  erosion_dilation.out  motion_blur.out  sharpening.out  sobel.out
aula_2/src/: blur.cpp  canny.cpp  color_segmentation.cpp  contours.cpp  contrast.cpp  embossing.cpp  erosion_dilation.cpp  motion_blur.cpp  pizza.cpp  sharpening.cpp  sobel.cpp
aula_3/: .CMakeLists.txt.swp  CMakeLists.txt
aula_3/src/: feature_viewer.cpp  image_stitch.cpp
aula_4/: CMakeLists.txt
aula_4/src/: haar_body.cpp  haar_face_eyes.cpp  haar_hand.cpp
aula_5/: CMakeLists.txt
aula_5/src/: epipolar.cpp  stereo_vision.cpp
aula_6/src/: svm.cpp
dasafios/: CMakeLists.txt
dasafios/src/: cubism.cpp  oil.cpp  pencil_draw.cpp  puzzle_effect.cpp
docker_opencv/: Dockerfile  run.sh
